--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    body{
+      background-color: #D6E1FF;
+    }
   </style>
 </head>
 <body>
   <main class="w-1440 h-screen flex justify-center items-center bg-[url('/images/pattern-background-desktop.svg')] ">
-    <div class="content w-96 flex-col border-2 border-black rounded-2xl bg-white">
+    <div class="content w-96 flex-col border-2  rounded-2xl bg-white">
       <div class="main-img">
         <img src="/images/illustration-hero.svg" alt="main-img" class="rounded-t-xl">
       </div>
@@ -36,7 +39,7 @@
         </div>
         <a href="#" class="change pr-3 text-blue-600 hover:text-purple-500">Change</a>
       </div>
-      <button class="payment w-10/12 text-white text-center font-bold flex justify-center mx-auto mt-8 bg-blue-600 py-4 px-10 rounded-xl shadow-blue-500/50 shadow-lg hover:bg-purple-500 hover:shadow-purple-500/50 shadow-lg" >Proceed to payment</button>
+      <button class="payment w-10/12 text-white text-center font-bold flex justify-center mx-auto mt-8 bg-blue-600 py-4 px-10 rounded-xl shadow-blue-500/50  hover:bg-purple-500 hover:shadow-purple-500/50 shadow-lg" >Proceed to payment</button>
       <p class="cancel text-center mt-5 mb-8 text-gray-400 hover:text-black"><a href="#">Cancel Order</a></p>
 
     </div>
